log
Fri Apr 17 12:13:07 AM UTC 2026: 
 tests:  0|7
total_score: 0/60
6560ebd
Fri Apr 17 02:04:39 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:37: error: too few arguments to function ‘calloc’
   48 |     HashMap *nuevoMapa = (HashMap*) calloc(sizeof(HashMap));
      |                                     ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
50fd0f6
Fri Apr 17 02:05:02 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
74d835e
Fri Apr 17 02:14:33 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘map’ undeclared (first use in this function)
   49 |     map ->size = 0;
      |     ^~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:9: error: ‘buckets’ undeclared (first use in this function)
   53 |     map-buckets = (Pair **) malloc((sizeof(Pair)) * capacity);
      |         ^~~~~~~
hashmap.c:54:9: error: ‘i’ undeclared (first use in this function)
   54 |     for(i = 0; i < capacity ;i++){
      |         ^
4be6b8b
Fri Apr 17 02:14:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: ‘map’ undeclared (first use in this function)
   49 |     map ->size = 0;
      |     ^~~
hashmap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:53:9: error: ‘buckets’ undeclared (first use in this function)
   53 |     map-buckets = (Pair **) malloc((sizeof(Pair)) * capacity);
      |         ^~~~~~~
fa72c43
